--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,13 @@
 	<head>
 		<title>mthon starfield</title>
 		<style>
-			body { margin: 0; }
+			body { margin: 0; background-image: url('assets/js/scene-bg.png');}
 			canvas { width: 100%; height: 100% }
+			.logo { z-index: 9999; bottom:0; left:0; position: absolute; margin-left:1em; margin-bottom: 1em;}
 		</style>
 	</head>
 	<body>
+		<div class="logo"><img src="assets/img/mthon-logo.png"></div>
 		<script src="assets/js/three.min.js"></script>
     <script src="assets/js/orbitcontrols.js"></script>
     <script src="assets/js/stellardata.json" type="text/javascript"></script>
@@ -15,16 +17,26 @@
 			var scene = new THREE.Scene();
 			var camera = new THREE.PerspectiveCamera( 45, window.innerWidth/window.innerHeight, 0.1, 1000 );
 
-			var renderer = new THREE.WebGLRenderer();
+			var renderer = new THREE.WebGLRenderer({ alpha: true });
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			document.body.appendChild( renderer.domElement );
 
+			// define texture for star sprite
+
+			var starspritemap = THREE.ImageUtils.loadTexture("assets/js/glow.png");
+
       for (var i = 0; i < stellarobjects.stars.length; i++) {
-        var geo = new THREE.SphereGeometry(stellarobjects.stars[i].size, 5, 5);
-        var mat = new THREE.MeshLambertMaterial( { color: planetarycolor.color[stellarobjects.stars[i].type - 1].hex });
-        var star = new THREE.Mesh( geo, mat );
-        star.position.set(stellarobjects.stars[i].x,stellarobjects.stars[i].y,stellarobjects.stars[i].z);
-        scene.add( star );
+        // var geo = new THREE.SphereGeometry(stellarobjects.stars[i].size, 5, 5);
+        // var mat = new THREE.MeshLambertMaterial( { color: planetarycolor.color[stellarobjects.stars[i].type - 1].hex });
+        // var star = new THREE.Mesh( geo, mat );
+        // star.position.set(stellarobjects.stars[i].x,stellarobjects.stars[i].y,stellarobjects.stars[i].z);
+        // scene.add( star );
+
+        var map = starspritemap;
+        var material = new THREE.SpriteMaterial( { map: map, color: planetarycolor.color[stellarobjects.stars[i].type - 1].hex, fog: true } );
+        var sprite = new THREE.Sprite( material );
+        sprite.position.set(stellarobjects.stars[i].x,stellarobjects.stars[i].y,stellarobjects.stars[i].z)
+        scene.add( sprite );
       }
 
       var light = new THREE.HemisphereLight( 0xffffbb, 0x080820, 1 );
