--- a/front/index.html
+++ b/front/index.html
@@ -10,16 +10,18 @@
 </head>
 
 <body>
+  <div class="logo"><img src="assets/img/mthon-logo.png"></div>
   <form id="uploadForm" enctype="multipart/form-data" action="/api/algo" method="post" style="background-color: white;">
     <p style="display: inline-block; margin: 0 3em 0 0; padding: 0;">Upload your algorithm here</p>
     <input type="file" name="algo" />
     <input type="text" name="group" placeholder="the name of your group"></input>
     <input type="submit" value="Submit" name="algo">
   </form>
-  <div style="position: absolute; left: 25px; bottom: 150px; color: white;">
+  <div style="position: absolute; left: 25px; bottom: 25px; color: white;" id="top-list">
     <p>Top list</p>
   </div>
 </body>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
 <script src="assets/js/three.min.js"></script>
@@ -40,13 +42,23 @@
       });
       return false;
     });
+
+    $.get('/api/top', function(toplist) {
+      toplist = _.sortBy(toplist, function(t) {
+        return t.time;
+      }).slice(0, 3);
+      var list = $('<ul></ul>').css({margin: '0px', padding: '0px', 'list-style-type': 'none'});
+      toplist.forEach(function(t) {
+        list.append('<li>'+t.time+'s by '+t.group+'</li>');
+      });
+      $('#top-list').append(list);
+    });
   });
 </script>
 <script>
 
   // scene setup
   var scene = new THREE.Scene();
-  //´scene.fog = new THREE.Fog(0x110329, 180, 350);
 
   // camera setup
   var camera = new THREE.PerspectiveCamera( 50, window.innerWidth/window.innerHeight, 0.1, 1000 );
@@ -108,8 +120,6 @@
     var line = new THREE.Line(geometry, material);
     scene.add(line);
   }
-
-  // var path = [2, 10, 86, 432, 61, 93, 582, 623, 446, 696];
 
   // create some lightning
 
