--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,28 @@
 <html>
 	<head>
-		<title>mthon starfield</title>
-		<style>
-			body { margin: 0; background-image: url('assets/js/scene-bg.png');background-size: 100%;}
-			canvas { width: 100%; height: 100% }
-			.logo { z-index: 9999; bottom:0; right:0; position: absolute; margin-right:1em; margin-bottom: 1em;}
-		</style>
+		<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,600,700' rel='stylesheet' type='text/css'>
+		<link href='assets/css/main.css' rel='stylesheet' type='text/css'>
+		<title>mthon - local visualizer</title>
 	</head>
 	<body>
-		<div class="logo"><img src="assets/img/mthon-logo.png"></div>
+		<div class="infobox hud">
+			<div class="row"><h2>Path total</h2></div>
+			<div class="row"><img src="assets/img/icon-clock.png" class="icon"></img><span class="label">ms</span></div>
+			<div class="row"><img src="assets/img/icon-length.png" class="icon"></img><span class="label">su</span></div>
+			<div class="row"><img src="assets/img/icon-hydrogen.png" class="icon"></img><span class="label">units</span></div>
+			<div class="row"><img src="assets/img/icon-helium.png" class="icon"></img><span class="label">units</span></div>
+			<div class="row"><img src="assets/img/icon-carbon.png" class="icon"></img><span class="label">units</span></div>
+			<div class="row"><img src="assets/img/icon-nitrogen.png" class="icon"></img><span class="label">units</span></div>
+			<div class="row"><img src="assets/img/icon-oxygen.png" class="icon"></img><span class="label">units</span></div>
+			<div class="row"><h2>Current star</h2></div>
+			<div class="row ignore-padding" id="current-star-image"><span class="label">...</span></div>
+			<div class="row"><span class="label" id="current-star-name">No star</span></div>
+			<div class="row"><img src="assets/img/icon-position.png" class="icon"></img><span class="label" id="current-position">x:0, y:0, z:0</span></div>
+			<div id="current-elements">
+				<div class="row"><span class="label">No elements</span></div>
+			</div>
+		</div>
+		<div class="logo hud"><img src="assets/img/mthon-logo.png"></div>
 		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="assets/js/three.min.js"></script>
     <script src="assets/js/orbitcontrols.js"></script>
