--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 				<div class="row"><span class="label">No elements</span></div>
 			</div>
 		</div>
+		<div class="controlbox hud"><div class="row" id="playControl"><img src="assets/img/icon-play.png" class="icon-large"></div></div>
 		<div class="logo hud"><img src="assets/img/mthon-logo.png"></div>
 		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="assets/js/three.min.js"></script>
