Added algo template

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 		<div class="controlbox hud"><div class="row" id="playControl"><img src="assets/img/icon-play.png" class="icon-large"></div></div>
 		<div class="logo hud"><img src="assets/img/mthon-logo.png"></div>
 		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-		<script src="assets/js/three.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r72/three.min.js"></script>
     <script src="assets/js/orbitcontrols.js"></script>
 		<script src='assets/js/tween.js'></script>
     <script src="assets/js/stellardata.json" type="text/javascript"></script>
