Minor updates to viz engine

--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,11 @@
 			<div class="row"><h2>Path total</h2></div>
 			<div class="row"><img src="assets/img/icon-clock.png" class="icon"></img><span class="label" id="algo-runtime">ms</span></div>
 			<div class="row"><img src="assets/img/icon-length.png" class="icon"></img><span class="label" id="algo-length">su</span></div>
-			<div class="row"><img src="assets/img/icon-hydrogen.png" class="icon"></img><span class="label">units</span></div>
-			<div class="row"><img src="assets/img/icon-helium.png" class="icon"></img><span class="label">units</span></div>
-			<div class="row"><img src="assets/img/icon-carbon.png" class="icon"></img><span class="label">units</span></div>
-			<div class="row"><img src="assets/img/icon-nitrogen.png" class="icon"></img><span class="label">units</span></div>
-			<div class="row"><img src="assets/img/icon-oxygen.png" class="icon"></img><span class="label">units</span></div>
+			<div class="row"><img src="assets/img/icon-hydrogen.png" class="icon"></img><span class="label" id="total-hydrogen">0 units</span></div>
+			<div class="row"><img src="assets/img/icon-helium.png" class="icon"></img><span class="label" id="total-helium">0 units</span></div>
+			<div class="row"><img src="assets/img/icon-carbon.png" class="icon"></img><span class="label" id="total-carbon">0 units</span></div>
+			<div class="row"><img src="assets/img/icon-nitrogen.png" class="icon"></img><span class="label" id="total-nitrogen">0 units</span></div>
+			<div class="row"><img src="assets/img/icon-oxygen.png" class="icon"></img><span class="label" id="total-oxygen">0 units</span></div>
 			<div class="row"><h2>Current star</h2></div>
 			<div class="row ignore-padding" id="current-star-image"><span class="label">...</span></div>
 			<div class="row"><span class="label" id="current-star-name">No star</span></div>
