--- a/front/viz.html
+++ b/front/viz.html
@@ -64,8 +64,25 @@
 				performanceData.runTime = (performanceData.endTime - performanceData.startTime).toFixed(4);
 
 				// debug data
-				currentSolution.path = [167, 559, 660, 117, 182, 580, 610, 446, 623, 61, 2];
-				currentSolution.connections = [[2,5],[2,15]];
+				currentSolution.path = [0,
+			  346,
+			  141,
+			  328,
+			  125,
+			  267,
+			  209,
+			  13,
+			  444,
+			  449,
+			  81,
+			  235,
+			  452,
+			  257,
+			  295,
+			  459,
+			  486,
+			  60 ];
+				// currentSolution.connections = [[2,5],[2,15]];
 
 				// visualize the data!
 				MTHON.initVisualizer(currentDataset, currentSolution, performanceData);
