--- a/app/index.html
+++ b/app/index.html
@@ -47,9 +47,8 @@
 				performanceData.endTime = performance.now();
 				performanceData.runTime = (performanceData.endTime - performanceData.startTime).toFixed(4);
 
-				// debug data
-				currentSolution.path = [167, 559, 660, 117, 182, 580, 610, 446, 623, 61, 2];
-				currentSolution.connections = [[2,5],[2,15]];
+				// // debug data
+				currentSolution.path = [0,1,2,3,4];
 
 				// visualize the data!
 				MTHON.initVisualizer(currentDataset, currentSolution, performanceData);
